# gwaihir

./: .gitignore  .gitlab-ci.yml  .verilog_format  Bender.yml  MLSYS.md  Makefile  README.md  REUSE.toml  iis-env.sh  pyproject.toml  requirements.txt
.github/workflows/: gitlab-ci.yml  lint.yml
.gitlab/: common.yml  sw-tests.yml
cfg/: gwaihir_noc.yml  mini_gwaihir_noc.yml  picobello_noc.yml
cfg/rdl/: cheshire_external.rdl  cheshire_tile.rdl  gw_soc_regs.rdl  pb_soc_regs.rdl
experiments/: .gitignore  picobello.py
experiments/barrier/: experiments.py  roi.json.tpl
experiments/gwaihir/: __init__.py  gwaihir.py
experiments/multicast/: README.md  experiments.py  fit.py  model.py  plot.py  verify.py
experiments/multicast/roi/: hw.json.tpl  seq.json.tpl  tree.json.tpl
experiments/picobello/: __init__.py  picobello.py
experiments/reduction/: experiments.py  fit.py  model.py  plot.py
experiments/reduction/roi/: hw.json.tpl  seq.json.tpl  tree.json.tpl
experiments/summa_gemm/: __init__.py  cfg.json.tpl  experiments.py  fit.py  model.py  plot.py  roi.json.tpl
hw/: cheshire_tile.sv  cluster_tile.sv  dummy_tile.sv  fhg_spu_tile.sv  gwaihir_pkg.sv  gwaihir_top.sv  mem_tile.sv  mem_tile_dma_wrap.sv  picobello_pkg.sv  picobello_top.sv  spm_tile.sv
sw/: sw.mk
sw/cheshire/tests/: access_clk_gating_rst_ctrl_reg.c  access_l2.c  simple_offload.c
sw/snitch/tests/: access_spm.c  barrier_benchmark.c  datamover.c  mcast_barrier.c  multi_mcast.c  multicast_benchmark.c  overlapping_barriers.c  parallel_row_col_barriers.c  redmule.c  redmule_quant.c  row_col_mcast.c  (+2 more)
(+25 files in other folders)
